--- a/buyer.html
+++ b/buyer.html
@@ -49,16 +49,15 @@ top:0;
 }
 
 input,select{
+flex:1;
 padding:10px;
 border-radius:8px;
 border:none;
 background:#222;
 color:white;
-width:100%;
-margin-top:5px;
 }
 
-/* GRID */
+/* PRODUCTS */
 
 .products{
 display:grid;
@@ -76,17 +75,16 @@ cursor:pointer;
 
 .card img{
 width:100%;
-height:120px;
+height:130px;
 object-fit:cover;
 border-radius:8px;
 }
 
 .price{
 color:#ff4081;
-font-weight:bold;
 }
 
-/* SECTIONS */
+/* SECTION */
 
 .section{
 display:none;
@@ -103,10 +101,9 @@ width:100%;
 border-radius:8px;
 color:white;
 margin-top:10px;
-cursor:pointer;
 }
 
-/* CART ITEM */
+/* CART */
 
 .cart-item{
 background:#171a21;
@@ -115,41 +112,6 @@ margin-top:10px;
 border-radius:8px;
 display:flex;
 justify-content:space-between;
-}
-
-/* TOTAL BOX */
-
-.total-box{
-background:#171a21;
-padding:10px;
-margin-top:10px;
-border-radius:10px;
-}
-
-/* PROFILE */
-
-.avatar{
-width:100px;
-height:100px;
-border-radius:50%;
-}
-
-/* ADDRESS */
-
-.address-card{
-background:#171a21;
-padding:10px;
-margin-top:10px;
-border-radius:8px;
-}
-
-/* ORDER */
-
-.order-card{
-background:#171a21;
-padding:12px;
-margin-top:12px;
-border-radius:10px;
 }
 
 /* NAV */
@@ -173,6 +135,7 @@ cursor:pointer;
 </style>
 
 </head>
+
 <body>
 
 <div class="container">
@@ -183,12 +146,13 @@ cursor:pointer;
 
 <div id="filterSection" class="filter-bar">
 
-<input id="search" oninput="searchProducts()">
+<input id="search" placeholder="Search"
+oninput="searchProducts()">
 
 <select onchange="applyFilter(this.value)">
 <option value="new">Newest</option>
-<option value="low">Low → High</option>
-<option value="high">High → Low</option>
+<option value="low">Low Price</option>
+<option value="high">High Price</option>
 </select>
 
 </div>
@@ -197,22 +161,48 @@ cursor:pointer;
 
 <div id="detail" class="section"></div>
 
+<div id="profile" class="section">
+
+<h2>Profile</h2>
+
+<input id="nameInput" placeholder="Name">
+<input id="phoneInput" placeholder="Phone">
+
+<button class="btn"
+onclick="saveProfile()">Save</button>
+
+<h3>Addresses</h3>
+
+<input id="addressInput" placeholder="Address">
+
+<button class="btn"
+onclick="saveAddress()">Save Address</button>
+
+<div id="addressList"></div>
+
+<h3>Orders</h3>
+
+<div id="ordersList"></div>
+
+<button class="btn"
+onclick="logout()">Logout</button>
+
+</div>
+
 <div id="cart" class="section">
 
 <h2>Cart</h2>
 
 <div id="cartItems"></div>
 
-<div class="total-box">
+<div>
 
-<div>Subtotal ₹<span id="subtotal">0</span></div>
-<div>Delivery ₹<span id="delivery">0</span></div>
-<div>GST ₹<span id="gst">0</span></div>
-<div>Discount ₹<span id="discount">0</span></div>
+Subtotal ₹<span id="subtotal">0</span><br>
+Delivery ₹<span id="delivery">0</span><br>
+GST ₹<span id="gst">0</span><br>
+Discount ₹<span id="discount">0</span><br>
 
-<hr>
-
-<h3>Total ₹<span id="grandTotal">0</span></h3>
+Total ₹<span id="grandTotal">0</span>
 
 </div>
 
@@ -220,59 +210,483 @@ cursor:pointer;
 
 <input id="couponInput" placeholder="Coupon">
 
-<button class="btn" onclick="applyCoupon()">Apply Coupon</button>
+<button class="btn"
+onclick="applyCoupon()">Apply Coupon</button>
 
-<button class="btn" onclick="placeOrder()">Place Order</button>
-
-</div>
-
-<div id="profile" class="section">
-
-<h2>Profile</h2>
-
-<center>
-
-<img id="avatar" src="default-avatar.png" class="avatar">
-
-<input type="file" onchange="uploadAvatar(event)">
-
-</center>
-
-<input id="nameInput" placeholder="Name">
-
-<input id="phoneInput" placeholder="Phone">
-
-<button class="btn" onclick="saveProfile()">Save Profile</button>
-
-<h3>Addresses</h3>
-
-<input id="addressInput" placeholder="Address">
-
-<button class="btn" onclick="saveAddress()">Save Address</button>
-
-<div id="addressList"></div>
-
-<h3>My Orders</h3>
-
-<div id="ordersList"></div>
-
-<button class="btn" onclick="logout()">Logout</button>
+<button class="btn"
+onclick="placeOrder()">Place Order</button>
 
 </div>
 
 <div class="bottom">
 
 <div onclick="showHome()">Home</div>
-
 <div onclick="showCart()">Cart</div>
-
 <div onclick="showProfile()">Profile</div>
 
 </div>
 
 </div>
 
-<script src="js/buyer.js"></script>
+<script>
+
+/* SUPABASE */
+
+const supabaseClient =
+window.supabase.createClient(
+"https://lssjsgfppehhclxqulso.supabase.co",
+"YOUR_ANON_KEY"
+);
+
+/* USER */
+
+let user =
+JSON.parse(localStorage.getItem("user"));
+
+if(!user){
+location="index.html";
+}
+
+/* GLOBAL */
+
+let currentProduct=null;
+let currentQty=1;
+let cartData=[];
+let discountAmount=0;
+
+/* NAV */
+
+function hideAll(){
+
+home.style.display="none";
+detail.style.display="none";
+profile.style.display="none";
+cart.style.display="none";
+filterSection.style.display="none";
+
+}
+
+/* HOME */
+
+async function showHome(){
+
+hideAll();
+
+home.style.display="grid";
+filterSection.style.display="flex";
+
+const {data} =
+await supabaseClient
+.from("products")
+.select("*");
+
+renderProducts(data);
+
+}
+
+function renderProducts(data){
+
+home.innerHTML="";
+
+data.forEach(p=>{
+
+home.innerHTML+=`
+
+<div class="card"
+onclick="showDetail('${p.id}')">
+
+<img src="${p.image_url}">
+
+<div>${p.name}</div>
+
+<div class="price">₹${p.price}</div>
+
+</div>
+
+`;
+
+});
+
+}
+
+/* SEARCH */
+
+async function searchProducts(){
+
+const {data} =
+await supabaseClient
+.from("products")
+.select("*")
+.ilike("name",
+"%"+search.value+"%");
+
+renderProducts(data);
+
+}
+
+/* FILTER */
+
+async function applyFilter(type){
+
+let query =
+supabaseClient
+.from("products")
+.select("*");
+
+if(type=="low")
+query=query.order("price",{ascending:true});
+
+if(type=="high")
+query=query.order("price",{ascending:false});
+
+if(type=="new")
+query=query.order("created_at",{ascending:false});
+
+const {data}=await query;
+
+renderProducts(data);
+
+}
+
+/* DETAIL */
+
+async function showDetail(id){
+
+hideAll();
+
+detail.style.display="block";
+
+const {data} =
+await supabaseClient
+.from("products")
+.select("*")
+.eq("id",id)
+.single();
+
+currentProduct=data;
+currentQty=1;
+
+detail.innerHTML=`
+
+<img src="${data.image_url}" width="100%">
+
+<h2>${data.name}</h2>
+
+₹<span id="price">${data.price}</span>
+
+<br>
+
+<button onclick="changeQty(-1)">-</button>
+
+<span id="qty">1</span>
+
+<button onclick="changeQty(1)">+</button>
+
+<button class="btn"
+onclick="addCart()">Add Cart</button>
+
+<button class="btn"
+onclick="showHome()">Back</button>
+
+`;
+
+}
+
+/* QTY */
+
+function changeQty(v){
+
+currentQty+=v;
+
+if(currentQty<1)
+currentQty=1;
+
+qty.innerText=currentQty;
+
+price.innerText=
+currentProduct.price*
+currentQty;
+
+}
+
+/* ADD CART */
+
+async function addCart(){
+
+const {data:exist} =
+await supabaseClient
+.from("cart")
+.select("*")
+.eq("user_email",user.email)
+.eq("product_id",currentProduct.id)
+.maybeSingle();
+
+if(exist){
+
+await supabaseClient
+.from("cart")
+.update({
+qty:exist.qty+currentQty
+})
+.eq("id",exist.id);
+
+}else{
+
+await supabaseClient
+.from("cart")
+.insert({
+user_email:user.email,
+product_id:currentProduct.id,
+qty:currentQty
+});
+
+}
+
+alert("Added");
+
+}
+
+/* SHOW CART */
+
+async function showCart(){
+
+hideAll();
+
+cart.style.display="block";
+
+const {data} =
+await supabaseClient
+.from("cart")
+.select(`
+id,
+qty,
+products(id,name,price)
+`)
+.eq("user_email",user.email);
+
+cartData=data;
+
+let subtotal=0;
+
+cartItems.innerHTML="";
+
+data.forEach(i=>{
+
+let price=i.products.price*i.qty;
+
+subtotal+=price;
+
+cartItems.innerHTML+=`
+
+<div class="cart-item">
+
+${i.products.name} x ${i.qty}
+
+<button onclick="removeCart('${i.id}')">
+X
+</button>
+
+</div>
+
+`;
+
+});
+
+calc(subtotal);
+
+loadAddresses();
+
+}
+
+/* REMOVE */
+
+async function removeCart(id){
+
+await supabaseClient
+.from("cart")
+.delete()
+.eq("id",id);
+
+showCart();
+
+}
+
+/* TOTAL */
+
+function calc(sub){
+
+let del=sub<500?50:0;
+let gst=sub*0.05;
+
+let total=sub+del+gst-discountAmount;
+
+subtotal.innerText=sub;
+delivery.innerText=del;
+gst.innerText=gst;
+discount.innerText=discountAmount;
+grandTotal.innerText=total;
+
+}
+
+/* COUPON */
+
+async function applyCoupon(){
+
+const {data}=
+await supabaseClient
+.from("coupons")
+.select("*")
+.eq("code",couponInput.value)
+.maybeSingle();
+
+if(!data){
+alert("Invalid");
+return;
+}
+
+discountAmount=data.discount;
+
+showCart();
+
+}
+
+/* ORDER */
+
+async function placeOrder(){
+
+let orderId="ORD-"+Date.now();
+
+for(const item of cartData){
+
+await supabaseClient
+.from("order_items")
+.insert({
+
+order_id:orderId,
+product_id:item.products.id,
+qty:item.qty,
+price:item.products.price
+
+});
+
+}
+
+await supabaseClient
+.from("orders")
+.insert({
+
+id:orderId,
+user_email:user.email,
+price:grandTotal.innerText,
+status:"Placed"
+
+});
+
+await supabaseClient
+.from("cart")
+.delete()
+.eq("user_email",user.email);
+
+alert("Order Placed");
+
+showHome();
+
+}
+
+/* ADDRESS */
+
+async function saveAddress(){
+
+navigator.geolocation
+.getCurrentPosition(async pos=>{
+
+let gps=
+pos.coords.latitude+
+","+pos.coords.longitude;
+
+await supabaseClient
+.from("addresses")
+.insert({
+
+user_email:user.email,
+address:
+addressInput.value+
+" GPS:"+gps
+
+});
+
+loadAddresses();
+
+});
+
+}
+
+async function loadAddresses(){
+
+const {data}=
+await supabaseClient
+.from("addresses")
+.select("*")
+.eq("user_email",user.email);
+
+addressSelect.innerHTML="";
+addressList.innerHTML="";
+
+data.forEach(a=>{
+
+addressSelect.innerHTML+=
+`<option>${a.address}</option>`;
+
+addressList.innerHTML+=
+`<div>${a.address}</div>`;
+
+});
+
+}
+
+/* PROFILE */
+
+async function showProfile(){
+
+hideAll();
+
+profile.style.display="block";
+
+}
+
+/* SAVE PROFILE */
+
+async function saveProfile(){
+
+await supabaseClient
+.from("users")
+.upsert({
+
+email:user.email,
+name:nameInput.value,
+phone:phoneInput.value
+
+});
+
+alert("Saved");
+
+}
+
+/* LOGOUT */
+
+function logout(){
+
+localStorage.removeItem("user");
+
+location="index.html";
+
+}
+
+/* START */
+
+showHome();
+
+</script>
 
 </body>
 </html>
