--- a/buyer.html
+++ b/buyer.html
@@ -228,136 +228,66 @@ onclick="placeOrder()">Place Order</button>
 
 </div>
 
+
+
 <script>
 
-/* SUPABASE */
-
-const supabaseClient =
-window.supabase.createClient(
+const supabaseClient = window.supabase.createClient(
 "https://lssjsgfppehhclxqulso.supabase.co",
 "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imxzc2pzZ2ZwcGVoaGNseHF1bHNvIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzExOTAwNzksImV4cCI6MjA4Njc2NjA3OX0.nRq1iFBiOEyty0ALRmS45ARoso7BsB0ENOvttu7nvX0"
 );
 
-/* USER */
-
-let user =
-JSON.parse(localStorage.getItem("user"));
-
-if(!user){
-location="index.html";
-}
-
-/* GLOBAL */
+let user = JSON.parse(localStorage.getItem("user"));
+if(!user){ location="index.html"; }
 
 let currentProduct=null;
 let currentQty=1;
 let cartData=[];
 let discountAmount=0;
 
-/* NAV */
+/* ================= NAV ================= */
 
 function hideAll(){
-
 home.style.display="none";
 detail.style.display="none";
 profile.style.display="none";
 cart.style.display="none";
 filterSection.style.display="none";
-
 }
 
-/* HOME */
+/* ================= HOME ================= */
 
 async function showHome(){
-
 hideAll();
-
 home.style.display="grid";
 filterSection.style.display="flex";
 
-const {data} =
-await supabaseClient
+const {data} = await supabaseClient
 .from("products")
 .select("*");
 
 renderProducts(data);
-
 }
 
 function renderProducts(data){
-
 home.innerHTML="";
-
 data.forEach(p=>{
-
 home.innerHTML+=`
-
-<div class="card"
-onclick="showDetail('${p.id}')">
-
+<div class="card" onclick="showDetail('${p.id}')">
 <img src="${p.image_url}">
-
 <div>${p.name}</div>
-
 <div class="price">₹${p.price}</div>
-
-</div>
-
-`;
-
+</div>`;
 });
-
 }
 
-/* SEARCH */
-
-async function searchProducts(){
-
-const {data} =
-await supabaseClient
-.from("products")
-.select("*")
-.ilike("name",
-"%"+search.value+"%");
-
-renderProducts(data);
-
-}
-
-/* FILTER */
-
-async function applyFilter(type){
-
-let query =
-supabaseClient
-.from("products")
-.select("*");
-
-if(type=="low")
-query=query.order("price",{ascending:true});
-
-if(type=="high")
-query=query.order("price",{ascending:false});
-
-if(type=="new")
-query=query.order("created_at",{ascending:false});
-
-const {data}=await query;
-
-renderProducts(data);
-
-}
-
-/* DETAIL */
+/* ================= DETAIL ================= */
 
 async function showDetail(id){
-
 hideAll();
-
 detail.style.display="block";
 
-const {data} =
-await supabaseClient
+const {data} = await supabaseClient
 .from("products")
 .select("*")
 .eq("id",id)
@@ -367,95 +297,59 @@ currentProduct=data;
 currentQty=1;
 
 detail.innerHTML=`
-
 <img src="${data.image_url}" width="100%">
-
 <h2>${data.name}</h2>
-
-₹<span id="price">${data.price}</span>
-
-<br>
-
+₹<span id="price">${data.price}</span><br>
+Stock: ${data.quantity}<br><br>
 <button onclick="changeQty(-1)">-</button>
-
 <span id="qty">1</span>
-
 <button onclick="changeQty(1)">+</button>
-
-<button class="btn"
-onclick="addCart()">Add Cart</button>
-
-<button class="btn"
-onclick="showHome()">Back</button>
-
+<button class="btn" onclick="addCart()">Add Cart</button>
+<button class="btn" onclick="showHome()">Back</button>
 `;
-
 }
-
-/* QTY */
 
 function changeQty(v){
-
 currentQty+=v;
-
-if(currentQty<1)
-currentQty=1;
-
+if(currentQty<1) currentQty=1;
 qty.innerText=currentQty;
-
-price.innerText=
-currentProduct.price*
-currentQty;
-
+price.innerText=currentProduct.price*currentQty;
 }
 
-/* ADD CART */
+/* ================= CART ================= */
 
 async function addCart(){
 
 const {data:exist} =
-await supabaseClient
-.from("cart")
+await supabaseClient.from("cart")
 .select("*")
 .eq("user_email",user.email)
 .eq("product_id",currentProduct.id)
 .maybeSingle();
 
 if(exist){
-
-await supabaseClient
-.from("cart")
-.update({
-qty:exist.qty+currentQty
-})
+await supabaseClient.from("cart")
+.update({qty:exist.qty+currentQty})
 .eq("id",exist.id);
-
 }else{
-
-await supabaseClient
-.from("cart")
+await supabaseClient.from("cart")
 .insert({
 user_email:user.email,
 product_id:currentProduct.id,
 qty:currentQty
 });
-
 }
 
-alert("Added");
-
+alert("Added to cart");
+showCart();
 }
-
-/* SHOW CART */
 
 async function showCart(){
 
 hideAll();
-
 cart.style.display="block";
 
-const {data} =
-await supabaseClient
+const {data} = await supabaseClient
 .from("cart")
 .select(`
 id,
@@ -465,166 +359,186 @@ products(id,name,price)
 .eq("user_email",user.email);
 
 cartData=data;
-
 let subtotal=0;
 
 cartItems.innerHTML="";
 
 data.forEach(i=>{
-
 let price=i.products.price*i.qty;
-
 subtotal+=price;
 
 cartItems.innerHTML+=`
-
 <div class="cart-item">
-
 ${i.products.name} x ${i.qty}
-
-<button onclick="removeCart('${i.id}')">
-X
-</button>
-
-</div>
-
-`;
-
+<button onclick="removeCart('${i.id}')">X</button>
+</div>`;
 });
 
-calc(subtotal);
-
+calculateTotals(subtotal);
 loadAddresses();
-
+loadAvailableCoupons();
 }
 
-/* REMOVE */
+function calculateTotals(sub){
 
-async function removeCart(id){
-
-await supabaseClient
-.from("cart")
-.delete()
-.eq("id",id);
-
-showCart();
-
-}
-
-/* TOTAL */
-
-function calc(sub){
-
-let del=sub<500?50:0;
-let gst=sub*0.05;
-
-let total=sub+del+gst-discountAmount;
+let del = sub===0 ? 0 : (sub<500?50:0);
+let gst = sub*0.05;
+let total = sub+del+gst-discountAmount;
 
 subtotal.innerText=sub;
 delivery.innerText=del;
 gst.innerText=gst;
 discount.innerText=discountAmount;
 grandTotal.innerText=total;
-
 }
 
-/* COUPON */
+async function removeCart(id){
+await supabaseClient.from("cart").delete().eq("id",id);
+showCart();
+}
+
+/* ================= COUPON ================= */
+
+async function loadAvailableCoupons(){
+
+const {data} = await supabaseClient
+.from("coupons")
+.select("*");
+
+let available = data.filter(c=> 
+!c.usage_limit || c.used_count < c.usage_limit
+);
+
+if(available.length>0){
+couponInput.placeholder = "Available: " + 
+available.map(c=>c.code).join(", ");
+}
+}
 
 async function applyCoupon(){
 
-const {data}=
-await supabaseClient
+const code = couponInput.value.trim();
+
+const {data} = await supabaseClient
 .from("coupons")
 .select("*")
-.eq("code",couponInput.value)
+.eq("code",code)
 .maybeSingle();
 
 if(!data){
-alert("Invalid");
+alert("Invalid coupon");
+return;
+}
+
+if(data.usage_limit && data.used_count >= data.usage_limit){
+alert("Coupon limit reached");
 return;
 }
 
 discountAmount=data.discount;
 
-showCart();
+await supabaseClient
+.from("coupons")
+.update({used_count:data.used_count+1})
+.eq("code",code);
 
+alert("Coupon applied");
+showCart();
 }
 
-/* ORDER */
+/* ================= ORDER ================= */
 
 async function placeOrder(){
+
+if(cartData.length===0){
+alert("Cart empty");
+return;
+}
 
 let orderId="ORD-"+Date.now();
 
 for(const item of cartData){
 
-await supabaseClient
-.from("order_items")
-.insert({
-
+await supabaseClient.from("order_items").insert({
 order_id:orderId,
 product_id:item.products.id,
 qty:item.qty,
 price:item.products.price
-
 });
-
 }
 
-await supabaseClient
-.from("orders")
-.insert({
-
+await supabaseClient.from("orders").insert({
 id:orderId,
 user_email:user.email,
 price:grandTotal.innerText,
 status:"Placed"
-
 });
 
-await supabaseClient
-.from("cart")
-.delete()
-.eq("user_email",user.email);
+await supabaseClient.from("cart")
+.delete().eq("user_email",user.email);
 
-alert("Order Placed");
+alert("Order placed\nOrder ID: "+orderId);
 
-showHome();
-
+discountAmount=0;
+showProfile();
 }
 
-/* ADDRESS */
+/* ================= PROFILE ================= */
+
+async function showProfile(){
+hideAll();
+profile.style.display="block";
+
+loadOrders();
+loadAddresses();
+}
+
+async function loadOrders(){
+
+const {data} = await supabaseClient
+.from("orders")
+.select("*")
+.eq("user_email",user.email);
+
+ordersList.innerHTML="";
+
+for(const o of data){
+
+const {data:items} =
+await supabaseClient
+.from("order_items")
+.select("*")
+.eq("order_id",o.id);
+
+ordersList.innerHTML+=`
+<div class="cart-item">
+<b>${o.id}</b><br>
+₹${o.price}<br>
+${items.map(i=>"Qty:"+i.qty+" ₹"+i.price).join("<br>")}
+</div>`;
+}
+}
+
+/* ================= ADDRESS ================= */
 
 async function saveAddress(){
 
-navigator.geolocation
-.getCurrentPosition(async pos=>{
+navigator.geolocation.getCurrentPosition(async pos=>{
 
-let gps=
-pos.coords.latitude+
-","+pos.coords.longitude;
+let gps=pos.coords.latitude+","+pos.coords.longitude;
 
-await supabaseClient
-.from("addresses")
-.insert({
-
+await supabaseClient.from("addresses").insert({
 user_email:user.email,
-address:
-addressInput.value+
-" GPS:"+gps
-
+address:addressInput.value+" GPS:"+gps
 });
 
 loadAddresses();
-
 });
-
 }
 
 async function loadAddresses(){
 
-const {data}=
-await supabaseClient
+const {data} = await supabaseClient
 .from("addresses")
 .select("*")
 .eq("user_email",user.email);
@@ -633,56 +547,12 @@ addressSelect.innerHTML="";
 addressList.innerHTML="";
 
 data.forEach(a=>{
-
-addressSelect.innerHTML+=
-`<option>${a.address}</option>`;
-
-addressList.innerHTML+=
-`<div>${a.address}</div>`;
-
+addressSelect.innerHTML+=`<option>${a.address}</option>`;
+addressList.innerHTML+=`<div>${a.address}</div>`;
 });
-
 }
 
-/* PROFILE */
-
-async function showProfile(){
-
-hideAll();
-
-profile.style.display="block";
-
-}
-
-/* SAVE PROFILE */
-
-async function saveProfile(){
-
-await supabaseClient
-.from("users")
-.upsert({
-
-email:user.email,
-name:nameInput.value,
-phone:phoneInput.value
-
-});
-
-alert("Saved");
-
-}
-
-/* LOGOUT */
-
-function logout(){
-
-localStorage.removeItem("user");
-
-location="index.html";
-
-}
-
-/* START */
+/* ================= START ================= */
 
 showHome();
 
